--- a/src/style.css
+++ b/src/style.css
@@ -19,14 +19,6 @@ body{
     position: relative;
     min-height: 100vh;
 }
-.input{
-    border: none;
-    border-radius: 10px;
-    padding: 0px 16px;
-    width: 20vw;
-    font-size: medium;
-    text-align: center; 
-}
 .title{
     min-width: 30VW;
 }
@@ -69,6 +61,7 @@ body{
     justify-items: center;
     align-items: center;
     color: white;
+    margin-top: 4vh;
 }
 .weather-display{
     display: grid;
@@ -99,8 +92,11 @@ body{
     grid-column: 2/3;
     justify-self: center;
     align-self: center;
-    font-size: 3.5em;
-    padding: 10px;
+    font-size: 2.5em;
+    padding: 8px;
+    background: none;
+    border: none;
+    color: white;
 }
 .misc-info{
     grid-row: 2/3;
@@ -110,15 +106,31 @@ body{
     font-size: small;
     padding: 10px;
 }
-#searchForm{
-    display: flex;
-    flex-direction: row;
+#searchArea{
+    display: grid;
+    grid-template: 1fr 1fr / 6fr 1fr;
     gap: 2px;
+    max-width: 30vw;
     background: none;
     border-bottom: 3px;
 }
+#searchBar{
+    grid-column: 1/2;
+    border: none;
+    border-radius: 10px;
+    padding: 0px 16px;
+    width: 100%;
+    font-size: medium;
+    text-align: center; 
+}
+#searchBtn{
+    grid-column: 2/3;
+}
 .error{
     display: none;
+    grid-row: 2/3;
+    grid-column: 1/3;
+    padding-left: 2vw;
     color: red;
 }
 .error.active{
